--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "dev": "nodemon src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
+    "@types/colors": "^1.2.1",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
