--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-rtc-srv",
   "version": "1.0.0",
   "main": "server.ts",
-  "repository": "git@github.com:lordniken/chat-rtc-srv.git",
+  "repository": "https://github.com/lordniken/chat-rtc-srv",
   "author": "Alexey Malyshev",
   "license": "MIT",
   "scripts": {
@@ -10,13 +10,16 @@
     "dev": "nodemon src/server.ts"
   },
   "dependencies": {
+    "@types/mongoose": "^5.10.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "@types/colors": "^1.2.1",
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
