--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon src/server.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/mongoose": "^5.10.3",
+    "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
