--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express-ws": "^3.0.0",
     "@types/mongoose": "^5.10.3",
+    "@types/ws": "^7.4.0",
     "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
