--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/mongoose": "^5.10.3",
     "@types/ws": "^7.4.0",
+    "aws-sdk": "^2.836.0",
     "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "ws": "^7.4.2"
   },
   "devDependencies": {
