--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "request": "^2.88.2",
     "ws": "^7.4.2"
   },
   "devDependencies": {
